--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,1 +1,22 @@
+name: telegram_mini_app
+description: A Flutter Web Telegram Mini App frontend
+publish_to: "none"
 
+version: 1.0.0+1
+
+environment:
+  sdk: ">=3.3.0 <4.0.0"
+
+dependencies:
+  flutter:
+    sdk: flutter
+  # Для безопасной работы с JS-объектами
+  js: ^0.6.7
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^5.0.0
+
+flutter:
+  uses-material-design: true
