--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,4 +21,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/background.png
+    - assets/images/main_bg.jpeg
+
