--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +23,6 @@ flutter:
 
   assets:
     - assets/images/main_bg.jpeg
-    - assets/images/bg_blackjack.jpeg
-    - assets/images/bg_tictactoe.jpeg
-    - assets/images/bg_shell.jpeg
+    - assets/images/blackjack.jpeg
+    - assets/images/tictactoe.jpeg
+    - assets/images/shell.jpeg
